Prevent scrolling on mobile from 100vh

--- a/css/layouts/letterbox.css
+++ b/css/layouts/letterbox.css
@@ -18,7 +18,9 @@ html {
    background-size: cover;
    }
 body {
+   display: flex;
    max-width: none;
+   align-items: center;
    padding: 0px;
    margin: 0px;
    }
@@ -26,7 +28,7 @@ main {
    display: flex;
    flex-direction: column;
    justify-content: center;
-   min-height: 100vh;
+   width: 100%;
    text-align: center;
    }
 main >section {
