--- a/css/layouts/vertical-bars.css
+++ b/css/layouts/vertical-bars.css
@@ -21,7 +21,6 @@ HTML:
 */
 body {
    max-width: 900px;
-   min-height: 100vh;
    border: 50px solid;
    border-top: none;
    border-bottom: none;
